kubernetes/cluster/ntfy/020-ntfy.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ntfy
  namespace: ntfy
  labels:
    app.kubernetes.io/name: ntfy
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: ntfy
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ntfy
      app.kubernetes.io/component: server
      app.kubernetes.io/part-of: ntfy
  serviceName: ntfy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ntfy
        app.kubernetes.io/component: server
        app.kubernetes.io/part-of: ntfy
    spec:
      containers:
      - name: ntfy
        image: binwiederhier/ntfy:v2.8.0
        args: ["serve"]
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: cache
          mountPath: "/var/ntfy"
      volumes:
        - name: config
          configMap:
            name: ntfy
  volumeClaimTemplates:
  - metadata:
      name: cache
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: longhorn
      resources:
        requests:
          storage: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: ntfy
  labels:
    app.kubernetes.io/name: ntfy
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: ntfy
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: ntfy
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: ntfy
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy
  namespace: ntfy
  labels:
    app.kubernetes.io/name: ntfy
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: ntfy
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - ntfy
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ntfy
            port:
              name: http
---
